Updated the room pricing